[gd_scene load_steps=2 format=3 uid="uid://h3fisrrmtyqp"]

[ext_resource type="Script" path="res://Pause.gd" id="1_h0llr"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_h0llr")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 0.337255)

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayBtn" type="Button" parent="Menu"]
layout_mode = 2
text = "Jogar"

[node name="QuitBtn" type="Button" parent="Menu"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Menu/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_quit_btn_pressed"]
